Big save : Setting name convention for the modules functions

--- a/docs/fr/Tutos.tex
+++ b/docs/fr/Tutos.tex
@@ -106,9 +106,9 @@
 
         \item Le message de succès de recherche du chemin du fichier CSV, dans la langue que vous\ souhaitez définir.\\
 
-        \item Le message d'erreur du header de la fonction \textbf{\color{mauve}HandleErrors}\\
+        \item Le message d'erreur du header de la fonction \textbf{\color{mauve}BU::Main::Errors::HandleErrors}\\
 
-        \item Le message de conseil de la fonction \textbf{\color{mauve}HandleErrors}
+        \item Le message de conseil de la fonction \textbf{\color{mauve}BU::Main::Errors::HandleErrors}
     \end{itemize}
 \end{justify}
 
@@ -276,7 +276,7 @@
 \end{justify}
 
 \begin{justify}
-	Vous y trouvrerez des fonctions nommées \textbf{\color{mauve}Echo<\$\_nom\_couleur\_en\_anglais>}.
+	Vous y trouvrerez des fonctions nommées \textbf{\color{mauve}BU::Echo<\$\_nom\_couleur\_en\_anglais>}.
 \end{justify} 
 
 \begin{justify}
@@ -436,7 +436,7 @@ avant chaque liste).
 \end{justify}
 
 \begin{justify}
-    Dans cette condition, appelez la fonction \textbf{\color{mauve}ConfEcho}, puis passez en arguments :
+    Dans cette condition, appelez la fonction \textbf{\color{mauve}BU::Main::Status::ConfEcho}, puis passez en arguments :
 
     \begin{itemize}
         \item Le paramètre \textbf{\color{orange}\$p\_file}\\
@@ -465,7 +465,7 @@ avant chaque liste).
 
 
 \begin{justify}
-    Maintenant, rendez vous dans la sous-section \textbf{CHANGING VALUES MORE EASILY}. Créez une nouvelle fonction, dont le nom commence par \textbf{\color{mauve}ChangeSTAT\_}, suivie du nom de votre variable de statut, sans le \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT}.
+    Maintenant, rendez vous dans la sous-section \textbf{CHANGING VALUES MORE EASILY}. Créez une nouvelle fonction, dont le nom commence par \textbf{\color{mauve}BU::Main:Status::ChangeSTAT\_}, suivie du nom de votre variable de statut, sans le \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT}.
 \end{justify}
 
 \begin{justify}
