--- a/docs/fr/modules/main/functions/Status.tex
+++ b/docs/fr/modules/main/functions/Status.tex
@@ -102,7 +102,7 @@
 \color{blue}
 \subsubsection{Fonctions externes appelées}\color{white}
 
-\textbf{Fonction : \color{mauve}DrawLine}\\[1\baselineskip]
+\textbf{Fonction : \color{mauve}BU::Main::Headers::DrawLine}\\[1\baselineskip]
 
 \textbf{Description :} .\\[1\baselineskip]
 
