--- a/docs/fr/modules/main/functions/Status.tex
+++ b/docs/fr/modules/main/functions/Status.tex
@@ -332,7 +332,7 @@
 
 \begin{justify}
     \textbf{Description de la variable :}\\
-    Cette variable de statut sert à empêcher l'exécution de la fonction \textbf{\color{mauve}CheckProjectLogStatus}, notamment dans le cas où une fonction d'affichage de texte formaté est appelée à l'intérieur de cette fonction, où via une autre fonction appelée dans le même cas.
+    Cette variable de statut sert à empêcher l'exécution de la fonction \textbf{\color{mauve}BU::CheckProjectLogStatus}, notamment dans le cas où une fonction d'affichage de texte formaté est appelée à l'intérieur de cette fonction, où via une autre fonction appelée dans le même cas.
 \end{justify}
 
 \begin{justify}
