Updated the French Documentation

--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -98,7 +98,7 @@
 \color{blue}
 \subsubsection{Fonctions externes appelées}\color{white}
 
-\textbf{Fonction : \color{mauve}IsChar}\\[1\baselineskip]
+\textbf{Fonction : \color{mauve}BU::IsChar}\\[1\baselineskip]
 
 \begin{justify}
     \textbf{Description :} Cette fonction verifie que la valeur enregistrée dans une variable soit un simple caractère alphanumérique.
@@ -206,7 +206,7 @@ configurations \textbf{\color{lime}Text.conf}.
 \end{justify}
 
 \begin{justify}
-    \textbf{Utilisation :}\linebreak
+    \textbf{Utilisation :}\\
     Appelez cette fonction pour dessiner une ligne devant remplir la totalité des colonnes d'une ligne du terminal.\\
 \end{justify}
 
