--- a/docs/fr/modules/main/functions/Status.tex
+++ b/docs/fr/modules/main/functions/Status.tex
@@ -167,7 +167,7 @@
 \subsection{Sous-section ``CHECKING VALUES''}
 
 \color{blue}
-\subsubsection{BU::Main::Status::ConfEcho}\color{white}
+\subsubsection{\color{mauve}BU::Main::Status::ConfEcho}\color{white}
 
 \begin{justify}
 \textbf{Description de la fonction :}\\
@@ -230,7 +230,7 @@
 \end{justify}
 
 \color{blue}
-\subsubsection{CheckSTAT\_DEBUG}\color{white}
+\subsubsection{\color{mauve}BU::Main::Status::CheckSTAT\_DEBUG}\color{white}
 
 \begin{justify}
     \textbf{Description de la variable :}\\
@@ -278,7 +278,7 @@
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
-\subsubsection{CheckSTAT\_DECHO}\color{white}
+\subsubsection{\color{mauve}BU::Main::Status::CheckSTAT\_DECHO}\color{white}
 
 \begin{justify}
     \textbf{Description de la variable :}
@@ -328,7 +328,7 @@
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
-\subsubsection{CheckSTAT\_ECHO}\color{white}
+\subsubsection{\color{mauve}BU::Main::Status::CheckSTAT\_ECHO}\color{white}
 
 \begin{justify}
     \textbf{Description de la variable :}\\
@@ -368,7 +368,7 @@
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
-\subsubsection{CheckSTAT\_ERROR}\color{white}
+\subsubsection{\color{mauve}BU::Main::Status::CheckSTAT\_ERROR}\color{white}
 
 \begin{justify}
     \textbf{Description de la variable :}\\
@@ -417,7 +417,7 @@
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
-\subsubsection{CheckSTAT\_INITALIZING}\color{white}
+\subsubsection{\color{mauve}BU::Main::Status::CheckSTAT\_INITALIZING}\color{white}
 
 \begin{justify}
     \textbf{Description de la variable :}\\
@@ -457,7 +457,7 @@
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
-\subsubsection{CheckSTAT\_LOG}\color{white}
+\subsubsection{\color{mauve}BU::Main::Status::CheckSTAT\_LOG}\color{white}
 
 \begin{justify}
     \textbf{Description de la variable :}\\
@@ -496,7 +496,7 @@
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
-\subsubsection{CheckSTAT\_LOG\_REDIRECT}\color{white}
+\subsubsection{\color{mauve}BU::Main::Status::CheckSTAT\_LOG\_REDIRECT}\color{white}
 
 \begin{justify}
     \textbf{Description de la variable :}\\
@@ -535,7 +535,7 @@
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
-\subsubsection{CheckSTAT\_OPERATE\_ROOT}\color{white}
+\subsubsection{\color{mauve}BU::Main::Status::CheckSTAT\_OPERATE\_ROOT}\color{white}
 
 \begin{justify}
     \item \textbf{Description de la variable :}\\
@@ -576,7 +576,7 @@
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
-\subsubsection{CheckSTAT\_PRINT\_INIT\_LOG}\color{white}
+\subsubsection{\color{mauve}BU::Main::Status::CheckSTAT\_PRINT\_INIT\_LOG}\color{white}
 
 \begin{justify}
     \textbf{Description de la variable :}\\
@@ -616,7 +616,7 @@
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
-\subsubsection{CheckSTAT\_TIME\_TXT}\color{white}
+\subsubsection{\color{mauve}BU::Main::Status::CheckSTAT\_TIME\_TXT}\color{white}
 
 \begin{justify}
     \textbf{Description de la variable :}\\
@@ -656,7 +656,7 @@
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
-\subsubsection{CheckSTAT\_TRANSLATED}\color{white}
+\subsubsection{\color{mauve}BU::Main::Status::CheckSTAT\_TRANSLATED}\color{white}
 
 \begin{justify}
     \textbf{Description de la variable :}\\
@@ -696,7 +696,7 @@
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
-\subsubsection{CheckSTAT\_TXT\_FMT}\color{white}
+\subsubsection{\color{mauve}BU::Main::Status::CheckSTAT\_TXT\_FMT}\color{white}
 
 \begin{justify}
     \textbf{Description de la variable :}\\
@@ -736,7 +736,7 @@
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
-\subsubsection{CheckSTAT\_USER\_OS}\color{white}
+\subsubsection{\color{mauve}BU::Main::Status::CheckSTAT\_USER\_OS}\color{white}
 
 \begin{justify}
     \textbf{Description de la variable :}\\
@@ -780,7 +780,7 @@
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
-\subsubsection{CheckProjectStatusVars}\color{white}
+\subsubsection{\color{mauve}BU::Main::Status::CheckProjectStatusVars}\color{white}
 
 \begin{justify}
     \textbf{Description de la fonction :}\\
