--- a/docs/fr/modules/main/functions/Errors.tex
+++ b/docs/fr/modules/main/functions/Errors.tex
@@ -150,7 +150,7 @@
 \end{justify}
 
 \begin{justify}
-    Passer une valeur à ce paramètre est nécessaire dans les situations où l'appel des fonctions \textbf{\color{mauve}BU::Echo<...>()} peut provoquer une boucle infinie.
+    Passer cette valeur à ce paramètre est absolument nécessaire dans les situations où l'appel des fonctions \textbf{\color{mauve}BU::Echo<...>()} peut provoquer une boucle infinie.
 \end{justify}
 
 \begin{justify}    
